tests/compile_fail/010_reserved_keyword_variable.vox
a number called "flag" is 1.
